# media-aggregator

./: .env.example  .gitignore  MEDIA_AGGREGATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml
mediaagg/: __init__.py  clients.py  storage.py
mediaagg/articles/: __init__.py  __main__.py  fetchers.py  indexer.py
mediaagg/scraping/: __init__.py  __main__.py  html.py
mediaagg/socials/: __init__.py  __main__.py  fetchers.py  indexer.py
